# Route-Optimizer

./: .gitignore  README.md  held-karp.cpp  package-lock.json  run.sh
backend/: CMakeLists.txt  run.sh
backend/src/: held_karp.cpp  held_karp.hpp  http_server.hpp  main.cpp  search.hpp  utils.hpp
frontend/: package-lock.json  package.json  setup.sh  vue.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: DestinationItem.scss  DestinationItem.vue  FinalRoute.vue  HomePage.scss  HomePage.vue  InputField.scss  InputField.vue  ManualInput.scss  ManualInput.vue  PlaceDropdown.scss  PlaceDropdown.vue  SearchField.vue  utils.js
